--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,24 +16,24 @@ spec:
       creationTimestamp: null
       labels:
         app: sample-flask-k8s
-    spec:
-      nodeSelector:
-        app: sample-flask-k8s
-      tolerations:
-      - key: "app"
-        operator: "Equal"
-        value: "sample-flask-k8s"
-        effect: "NoSchedule"
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - sample-flask-k8s
-            topologyKey: "kubernetes.io/hostname"
+    # spec:
+    #   nodeSelector:
+    #     app: sample-flask-k8s
+    #   tolerations:
+    #   - key: "app"
+    #     operator: "Equal"
+    #     value: "sample-flask-k8s"
+    #     effect: "NoSchedule"
+    #   affinity:
+    #     podAntiAffinity:
+    #       requiredDuringSchedulingIgnoredDuringExecution:
+    #       - labelSelector:
+    #           matchExpressions:
+    #           - key: app
+    #             operator: In
+    #             values:
+    #             - sample-flask-k8s
+    #         topologyKey: "kubernetes.io/hostname"
       containers:
       - image: sample-flask-k8s
         name: sample-flask-k8s
