--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,8 +28,11 @@ jobs:
 
       - name: kustomize
         uses: imranismail/setup-kustomize@v2
-        with:
-          kustomize-version: v3.8.7
+        run: |
+          kustomize edit set image app:${GITHUB_SHA}
+          git add .
+          git commit -m "Set `app` image tag to `${GITHUB_SHA}`"
+          git push
 
       - name: update k8s
         run: |
