--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,11 +28,8 @@ jobs:
 
       - name: kustomize
         uses: imranismail/setup-kustomize@v2
-        run: |
-          kustomize edit set image app:${GITHUB_SHA}
-          git add .
-          git commit -m "Set `app` image tag to `${GITHUB_SHA}`"
-          git push
+        with:
+          kustomize-version: v5.2.1
 
       - name: update k8s
         run: |
