--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
           username: marcosportorc
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: marcosportorc/webapp
-          tags: ${{ github.sha }}, 1.0
+          tags: ${{ github.sha }}, latest
       - name: get image sha
         id: get_image_sha
         run: echo "::set-output name=sha::$(docker inspect --format='{{index .RepoDigests 0}}' marcosportorc/webapp | cut -d'@' -f2)"
