--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,52 +21,59 @@ jobs:
       - name: get image sha
         id: get_image_sha
         run: echo "::set-output name=sha::$(docker inspect --format='{{index .RepoDigests 0}}' marcosportorc/webapp | cut -d'@' -f2)"
-      
-      - name: Integrate with Upwind
-        env:
-          IMAGE: webapp
-          IMAGE_SHA: ${{ steps.get_image_sha.outputs.sha }}
-          UPWIND_API_ENDPOINT: https://api.upwind.io
-          UPWIND_AUTH_ENDPOINT: https://auth.upwind.io
-          UPWIND_ORGANIZATION_ID: ${{ secrets.UPWIND_ORGANIZATION_ID }}
-          UPWIND_CLIENT_SECRET: ${{ secrets.UPWIND_CLIENT_SECRET }}
-          UPWIND_CLIENT_ID: ${{ secrets.UPWIND_CLIENT_ID }}
-        run: |
-          # Get Access Token
-          response=$(curl -s --location "${UPWIND_AUTH_ENDPOINT}/oauth/token" \
-            --header "Content-Type: application/x-www-form-urlencoded" \
-            --data-urlencode "grant_type=client_credentials" \
-            --data-urlencode "audience=${UPWIND_API_ENDPOINT}" \
-            --data-urlencode "client_id=${UPWIND_CLIENT_ID}" \
-            --data-urlencode "client_secret=${UPWIND_CLIENT_SECRET}")
-          ACCESS_TOKEN=$(echo "$response" | jq -r '.access_token')  
+      - name: Create Image Build Event
+        uses: upwindsecurity/create-image-build-event-action@v2
+        with:
+          image: webapp
+          image_sha: ${{ steps.get_image_sha.outputs.sha }}
+          upwind_client_id: ${{ secrets.UPWIND_CLIENT_ID }}
+          upwind_client_secret: ${{ secrets.UPWIND_CLIENT_SECRET }}
+          upwind_organization_id: ${{ secrets.UPWIND_ORGANIZATION_ID }}
+      # - name: Integrate with Upwind
+      #   env:
+      #     IMAGE: webapp
+      #     IMAGE_SHA: ${{ steps.get_image_sha.outputs.sha }}
+      #     UPWIND_API_ENDPOINT: https://api.upwind.io
+      #     UPWIND_AUTH_ENDPOINT: https://auth.upwind.io
+      #     UPWIND_ORGANIZATION_ID: ${{ secrets.UPWIND_ORGANIZATION_ID }}
+      #     UPWIND_CLIENT_SECRET: ${{ secrets.UPWIND_CLIENT_SECRET }}
+      #     UPWIND_CLIENT_ID: ${{ secrets.UPWIND_CLIENT_ID }}
+      #   run: |
+      #     # Get Access Token
+      #     response=$(curl -s --location "${UPWIND_AUTH_ENDPOINT}/oauth/token" \
+      #       --header "Content-Type: application/x-www-form-urlencoded" \
+      #       --data-urlencode "grant_type=client_credentials" \
+      #       --data-urlencode "audience=${UPWIND_API_ENDPOINT}" \
+      #       --data-urlencode "client_id=${UPWIND_CLIENT_ID}" \
+      #       --data-urlencode "client_secret=${UPWIND_CLIENT_SECRET}")
+      #     ACCESS_TOKEN=$(echo "$response" | jq -r '.access_token')  
 
-          # Call Upwind API
-          CURL_CMD="curl -fsSL \"${UPWIND_API_ENDPOINT}/v1/organizations/$UPWIND_ORGANIZATION_ID/events\" \
-            --request POST \
-            --write-out \"\n%{http_code}\" \
-            --header \"Content-Type: application/json\" \
-            --header \"Authorization: Bearer $ACCESS_TOKEN\" \
-            --data '{
-                \"type\": \"image_build\",
-                \"reporter\": \"github_actions\",
-                \"data\" :{
-                    \"image\" : \"${IMAGE}\",
-                    \"commit_sha\" : \"${GITHUB_SHA}\",
-                    \"repository\": \"https://github.com/${GITHUB_REPOSITORY}.git\",
-                    \"branch\": \"${GITHUB_REF_NAME}\",
-                    \"image_sha\": \"${IMAGE_SHA}\",
-                    \"build_time\" : \"$(date +'%Y-%m-%dT%H:%M:%SZ')\"
-                }
-              }'
-            "
-            response=$(eval "${CURL_CMD}")
-            echo "${response}"
-            response_code=$(echo "${response}" | tail -n 1)
-            response_body=$(echo "${response}" | sed '$ d' | jq '.')
-            echo "Status Code: ${response_code}"
-            echo "Response:"
-            echo "${response_body}"
+      #     # Call Upwind API
+      #     CURL_CMD="curl -fsSL \"${UPWIND_API_ENDPOINT}/v1/organizations/$UPWIND_ORGANIZATION_ID/events\" \
+      #       --request POST \
+      #       --write-out \"\n%{http_code}\" \
+      #       --header \"Content-Type: application/json\" \
+      #       --header \"Authorization: Bearer $ACCESS_TOKEN\" \
+      #       --data '{
+      #           \"type\": \"image_build\",
+      #           \"reporter\": \"github_actions\",
+      #           \"data\" :{
+      #               \"image\" : \"${IMAGE}\",
+      #               \"commit_sha\" : \"${GITHUB_SHA}\",
+      #               \"repository\": \"https://github.com/${GITHUB_REPOSITORY}.git\",
+      #               \"branch\": \"${GITHUB_REF_NAME}\",
+      #               \"image_sha\": \"${IMAGE_SHA}\",
+      #               \"build_time\" : \"$(date +'%Y-%m-%dT%H:%M:%SZ')\"
+      #           }
+      #         }'
+      #       "
+      #       response=$(eval "${CURL_CMD}")
+      #       echo "${response}"
+      #       response_code=$(echo "${response}" | tail -n 1)
+      #       response_body=$(echo "${response}" | sed '$ d' | jq '.')
+      #       echo "Status Code: ${response_code}"
+      #       echo "Response:"
+      #       echo "${response_body}"
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
